# nix-stm32f4xx-blinky

./: .gitignore  Cargo.toml  Makefile  README.MD  flake.nix
.cargo/: config
src/: main.rs
